--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,80 +1,22 @@
-cmake_minimum_required(VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.8)
 
-project(TimeRecorder VERSION 0.1 LANGUAGES CXX)
-
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
-
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-# QtCreator supports the following variables for Android, which are identical to qmake Android variables.
-# Check https://doc.qt.io/qt/deployment-android.html for more information.
-# They need to be set before the find_package( ...) calls below.
-
-#if(ANDROID)
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-#    if (ANDROID_ABI STREQUAL "armeabi-v7a")
-#        set(ANDROID_EXTRA_LIBS
-#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libcrypto.so
-#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libssl.so)
-#    endif()
-#endif()
-
-find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
-
-set(PROJECT_SOURCES
-        "src/main.cpp"
-        "src/mainwindow.cpp"
-        "src/mainwindow.ui"
-        "src/mainwindow.h"
-)
-
-if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(TimeRecorder
-        MANUAL_FINALIZATION
-        ${PROJECT_SOURCES}
-    )
-else()
-    if(ANDROID)
-        add_library(TimeRecorder SHARED
-            ${PROJECT_SOURCES}
-        )
-    else()
-        add_executable(TimeRecorder
-            ${PROJECT_SOURCES}
-        )
-    endif()
-endif()
-
-target_link_libraries(TimeRecorder PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
-
-set_target_properties(TimeRecorder PROPERTIES
-    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
-    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
-)
-
-if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(TimeRecorder)
-endif()
-
-# my setting
 add_definitions(-DUNICODE -D_UNICODE)
 
-# 添加子项目
-add_subdirectory(Base)
-
 # 添加包含文件
-include_directories(Base/include)
-include_directories(Base/SQLite)
-include_directories(Base/zqlTools)
-include_directories(include)
-include_directories(build/TimeRecorder_autogen/include_Debug)
+include_directories("include" "lib/include")
 
-# 链接子项目
-target_link_libraries(TimeRecorder PRIVATE TimeRecorderBase)
+project (TimeRecorder)
+
+set(PROJECT_SOURCES
+    "lib/sqlite3.c"
+    "src/TimeRecorder.cpp"
+    "src/TimeRecorderBase.cpp"
+    "src/TimeRecorderLog.cpp"
+    "src/TimeRecorderSQL.cpp"
+    "src/TimeRecorderSQLite.cpp"
+    "src/TimeRecorderWin32.cpp"
+)
+
+add_executable(${PROJECT_NAME} ${PROJECT_SOURCES} "src/main.cpp")
+
+add_executable(TestSQLite ${PROJECT_SOURCES} "Test/TestSQLite.cpp")
